--- a/UI/ManipulableContentControlSample/ManipulableContentControlSample/MainPage.xaml
+++ b/UI/ManipulableContentControlSample/ManipulableContentControlSample/MainPage.xaml
@@ -68,6 +68,21 @@
 				<Run Text="HorizontalZoomCenter:" />
 				<Run Text="{Binding HorizontalZoomCenter, ElementName=mContent}" /><LineBreak />
 			</TextBlock>
+			<TextBlock>
+				<Run Text="Debugging" /><LineBreak /><LineBreak />
+				<Run Text="VerticalMaxScroll:" />
+				<Run Text="{Binding VerticalMaxScroll, ElementName=mContent}" /><LineBreak />
+				<Run Text="VerticalMinScroll:" />
+				<Run Text="{Binding VerticalMinScroll, ElementName=mContent}" /><LineBreak />
+				<Run Text="HorizontalMaxScroll:" />
+				<Run Text="{Binding HorizontalMaxScroll, ElementName=mContent}" /><LineBreak />
+				<Run Text="HorizontalMinScroll:" />
+				<Run Text="{Binding HorizontalMinScroll, ElementName=mContent}" /><LineBreak />
+				<Run Text="ViewPortWidth:" />
+				<Run Text="{Binding ViewPortWidth, ElementName=mContent}" /><LineBreak />
+				<Run Text="ViewPortHeight:" />
+				<Run Text="{Binding ViewPortHeight, ElementName=mContent}" /><LineBreak />
+			</TextBlock>
 		</StackPanel>
 	</Grid>
 </Page>
