--- a/UI/ManipulableContentControlSample/ManipulableContentControlSample.Shared/AppHead.xaml
+++ b/UI/ManipulableContentControlSample/ManipulableContentControlSample.Shared/AppHead.xaml
@@ -1,17 +1,18 @@
-﻿<local:App x:Class="ManipulableContentControlSample.AppHead"
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-       xmlns:wasm="http://platform.uno/wasm"
-       xmlns:local="using:ManipulableContentControlSample"
-       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-       mc:Ignorable="wasm">
+﻿<local:App
+	x:Class="ManipulableContentControlSample.AppHead"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:local="using:ManipulableContentControlSample"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:wasm="http://platform.uno/wasm"
+	mc:Ignorable="wasm">
 
-  <local:App.Resources>
-    <ResourceDictionary>
-      <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="ms-appx:///ManipulableContentControlSample/AppResources.xaml" />
-      </ResourceDictionary.MergedDictionaries>
-    </ResourceDictionary>
-  </local:App.Resources>
+	<local:App.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="ms-appx:///ManipulableContentControlSample/AppResources.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</local:App.Resources>
 
 </local:App>
