chore: Shifting control to separate library to ensure separation from sample code

--- a/UI/ManipulableContentControlSample/ManipulableContentControlSample/MainPage.xaml
+++ b/UI/ManipulableContentControlSample/ManipulableContentControlSample/MainPage.xaml
@@ -2,7 +2,7 @@
 	x:Class="ManipulableContentControlSample.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:controls="using:ManipulableContentControlSample.Controls"
+	xmlns:controls="using:InteractionControls"
 	xmlns:local="using:ManipulableContentControlSample"
 	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 	<Grid>
