--- a/UI/ManipulableContentControlSample/InteractionControls/ManipulableContent.xaml
+++ b/UI/ManipulableContentControlSample/InteractionControls/ManipulableContent.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:ctl="using:ManipulableContentControlSample.Controls">
+	xmlns:ctl="using:InteractionControls">
 
 	<Style TargetType="ctl:ManipulableContent">
 		<Setter Property="Template">
