chore: Renaming control to ZoomContentControl. making style explicit and add implicit style

--- a/UI/ManipulableContentControlSample/InteractionControls/ZoomContentControl.xaml
+++ b/UI/ManipulableContentControlSample/InteractionControls/ZoomContentControl.xaml
@@ -3,40 +3,40 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:ctl="using:InteractionControls">
 
-	<Style TargetType="ctl:ManipulableContent">
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="ctl:ManipulableContent">
-					<Grid>
-						<Grid.RowDefinitions>
-							<RowDefinition Height="*" />
-							<RowDefinition Height="Auto" />
-						</Grid.RowDefinitions>
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="*" />
-							<ColumnDefinition Width="Auto" />
-						</Grid.ColumnDefinitions>
-						<Border
+  <Style x:Key="DefaultZoomContentControlStyle"  TargetType="ctl:ZoomContentControl">
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="ctl:ZoomContentControl">
+          <Grid>
+            <Grid.RowDefinitions>
+              <RowDefinition Height="*" />
+              <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="*" />
+              <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Border
 							Grid.Row="0"
 							Grid.Column="0"
 							Background="{TemplateBinding Background}">
-							<ContentPresenter
+              <ContentPresenter
 								x:Name="PART_Presenter"
 								Margin="{TemplateBinding Padding}"
 								HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
 								VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
 								Content="{TemplateBinding Content}"
 								ContentTemplate="{TemplateBinding ContentTemplate}">
-								<ContentPresenter.RenderTransform>
-									<TransformGroup>
-										<ScaleTransform CenterX="{TemplateBinding HorizontalZoomCenter}" CenterY="{TemplateBinding VerticalZoomCenter}" ScaleX="{TemplateBinding ZoomLevel}" ScaleY="{TemplateBinding ZoomLevel}" />
-										<TranslateTransform X="{TemplateBinding HorizontalOffset}" Y="{TemplateBinding VerticalOffset}" />
-									</TransformGroup>
-								</ContentPresenter.RenderTransform>
-							</ContentPresenter>
-						</Border>
-						<!--  Vertical ScrollBar  -->
-						<ScrollBar
+                <ContentPresenter.RenderTransform>
+                  <TransformGroup>
+                    <ScaleTransform CenterX="{TemplateBinding HorizontalZoomCenter}" CenterY="{TemplateBinding VerticalZoomCenter}" ScaleX="{TemplateBinding ZoomLevel}" ScaleY="{TemplateBinding ZoomLevel}" />
+                    <TranslateTransform X="{TemplateBinding HorizontalOffset}" Y="{TemplateBinding VerticalOffset}" />
+                  </TransformGroup>
+                </ContentPresenter.RenderTransform>
+              </ContentPresenter>
+            </Border>
+            <!--  Vertical ScrollBar  -->
+            <ScrollBar
 							x:Name="PART_scrollV"
 							Grid.Row="0"
 							Grid.Column="1"
@@ -49,14 +49,14 @@
 							SmallChange="10"
 							ViewportSize="{TemplateBinding ViewPortHeight}"
 							Value="{TemplateBinding VerticalOffset}" />
-						<!--  Horizontal ScrollBar  -->
-						<TextBlock
+            <!--  Horizontal ScrollBar  -->
+            <TextBlock
 							HorizontalAlignment="Stretch"
 							VerticalAlignment="Center"
 							FontSize="16"
 							Foreground="Red"
 							Text="{Binding Value, ElementName=PART_scrollH}" />
-						<ScrollBar
+            <ScrollBar
 							x:Name="PART_scrollH"
 							Grid.Row="1"
 							Grid.Column="0"
@@ -70,10 +70,13 @@
 							SmallChange="10"
 							ViewportSize="{TemplateBinding ViewPortWidth}"
 							Value="{TemplateBinding HorizontalOffset}" />
-					</Grid>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
+          </Grid>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
+
+  <Style TargetType="ctl:ZoomContentControl" BasedOn="{StaticResource DefaultZoomContentControlStyle}"   />
+
 
 </ResourceDictionary>
