--- a/UI/ManipulableContentControlSample/ManipulableContentControlSample/MainPage.xaml
+++ b/UI/ManipulableContentControlSample/ManipulableContentControlSample/MainPage.xaml
@@ -16,7 +16,7 @@
 			Padding="10"
 			Background="Purple"
 			Spacing="15">
-			<TextBlock FontSize="16" Text="Using ManipulableContent Control" />
+			<TextBlock FontSize="16" Text="Using ZoomContentControl Control" />
 
 			<TextBlock>
 				The control allows its content to be manipulated by mouse events.<LineBreak />
@@ -32,7 +32,7 @@
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
 			<!--  utu:SafeArea.Insets="VisibleBounds"  -->
-			<controls:ManipulableContent
+			<controls:ZoomContentControl
 				x:Name="mContent"
 				HorizontalAlignment="Stretch"
 				VerticalAlignment="Stretch"
@@ -45,7 +45,7 @@
 						AutomationProperties.AutomationId="HelloTextBlock"
 						Text="Hello Uno Platform" />
 				</StackPanel>
-			</controls:ManipulableContent>
+			</controls:ZoomContentControl>
 		</Grid>
 		<StackPanel
 			Grid.Row="2"
