fix: Fix ScrollBars behavior

--- a/UI/PhotoViewer/InteractionControls/ZoomContentControl.xaml
+++ b/UI/PhotoViewer/InteractionControls/ZoomContentControl.xaml
@@ -48,7 +48,8 @@
 							Minimum="{TemplateBinding VerticalMinScroll}"
 							Orientation="Vertical"
 							SmallChange="1"
-							ViewportSize="{TemplateBinding ViewPortHeight}" />
+							ViewportSize="{TemplateBinding ViewPortHeight}"
+							Value="{TemplateBinding VerticalScrollValue}" />
 						<!--  Horizontal ScrollBar  -->
 						<ScrollBar
 							x:Name="PART_scrollH"
@@ -62,7 +63,8 @@
 							Minimum="{TemplateBinding HorizontalMinScroll}"
 							Orientation="Horizontal"
 							SmallChange="1"
-							ViewportSize="{TemplateBinding ViewPortWidth}" />
+							ViewportSize="{TemplateBinding ViewPortWidth}"
+							Value="{TemplateBinding HorizontalScrollValue}" />
 					</Grid>
 				</ControlTemplate>
 			</Setter.Value>
