chore: Canary fixes

--- a/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/MainPage.xaml
+++ b/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/MainPage.xaml
@@ -3,6 +3,7 @@
       xmlns:utu="using:Uno.Toolkit.UI"
       xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       xmlns:um="using:Uno.Material"
+      xmlns:ut="using:Uno.Themes"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -158,10 +159,10 @@
                     <ToggleButton.Content>
                         <PathIcon Data="{StaticResource Icon_Favorite_Border}" />
                     </ToggleButton.Content>
-                    <um:ControlExtensions.AlternateContent>
+                    <ut:ControlExtensions.AlternateContent>
                         <PathIcon Data="{StaticResource Icon_Favorite}"
                                   Foreground="{ThemeResource OnSurfaceMediumBrush}" />
-                    </um:ControlExtensions.AlternateContent>
+                    </ut:ControlExtensions.AlternateContent>
                 </ToggleButton>
             </Border>
 
