--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/AuthorPage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/AuthorPage.xaml
@@ -3,12 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UnoGoodReads.Views"
-	xmlns:um="using:Uno.Material"
+    xmlns:um="using:Uno.Material"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:utu="using:Uno.Toolkit.UI"
-	xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-	mc:Ignorable="d"
+    xmlns:utu="using:Uno.Toolkit.UI"
+    xmlns:ut="using:Uno.Themes"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
@@ -71,9 +72,9 @@
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
-                  <um:ControlExtensions.Icon>
+                  <ut:ControlExtensions.Icon>
                     <PathIcon Data="{StaticResource Icon_Arrow_Drop_Down}" Foreground="{ThemeResource OnPrimaryBrush}" />
-                  </um:ControlExtensions.Icon>
+                  </ut:ControlExtensions.Icon>
                 </Button>
               </utu:AutoLayout>
             </utu:AutoLayout>
@@ -89,9 +90,9 @@
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
-                  <um:ControlExtensions.Icon>
+                  <ut:ControlExtensions.Icon>
                     <PathIcon Data="{StaticResource Icon_Arrow_Drop_Down}" Foreground="{ThemeResource OnPrimaryBrush}" />
-                  </um:ControlExtensions.Icon>
+                  </ut:ControlExtensions.Icon>
                 </Button>
               </utu:AutoLayout>
             </utu:AutoLayout>
@@ -107,9 +108,9 @@
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
-                  <um:ControlExtensions.Icon>
+                  <ut:ControlExtensions.Icon>
                     <PathIcon Data="{StaticResource Icon_Arrow_Drop_Down}" Foreground="{ThemeResource OnPrimaryBrush}" />
-                  </um:ControlExtensions.Icon>
+                  </ut:ControlExtensions.Icon>
                 </Button>
               </utu:AutoLayout>
             </utu:AutoLayout>
@@ -125,9 +126,9 @@
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
-                  <um:ControlExtensions.Icon>
+                  <ut:ControlExtensions.Icon>
                     <PathIcon Data="{StaticResource Icon_Arrow_Drop_Down}" Foreground="{ThemeResource OnPrimaryBrush}" />
-                  </um:ControlExtensions.Icon>
+                  </ut:ControlExtensions.Icon>
                 </Button>
               </utu:AutoLayout>
             </utu:AutoLayout>
@@ -143,9 +144,9 @@
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
-                  <um:ControlExtensions.Icon>
+                  <ut:ControlExtensions.Icon>
                     <PathIcon Data="{StaticResource Icon_Arrow_Drop_Down}" Foreground="{ThemeResource OnPrimaryBrush}" />
-                  </um:ControlExtensions.Icon>
+                  </ut:ControlExtensions.Icon>
                 </Button>
               </utu:AutoLayout>
             </utu:AutoLayout>
