chore: Fixes for the app to run

--- a/reference/ToDo/ToDo/Views/Shell.xaml
+++ b/reference/ToDo/ToDo/Views/Shell.xaml
@@ -9,27 +9,29 @@
 			 d:DesignHeight="300"
 			 d:DesignWidth="400">
 
-	<utu:ExtendedSplashScreen x:Name="Splash"
-							  HorizontalAlignment="Stretch"
-							  VerticalAlignment="Stretch"
-							  HorizontalContentAlignment="Stretch"
-							  VerticalContentAlignment="Stretch">
-		<utu:ExtendedSplashScreen.LoadingContentTemplate>
-			<DataTemplate>
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="2*" />
-						<RowDefinition />
-					</Grid.RowDefinitions>
+  <Border Background="{ThemeResource BackgroundBrush}">
+    <utu:ExtendedSplashScreen x:Name="Splash"
+              HorizontalAlignment="Stretch"
+              VerticalAlignment="Stretch"
+              HorizontalContentAlignment="Stretch"
+              VerticalContentAlignment="Stretch">
+      <utu:ExtendedSplashScreen.LoadingContentTemplate>
+        <DataTemplate>
+          <Grid>
+            <Grid.RowDefinitions>
+              <RowDefinition Height="2*" />
+              <RowDefinition />
+            </Grid.RowDefinitions>
 
-					<ProgressRing IsActive="True"
-								  Grid.Row="1"
-								  VerticalAlignment="Center"
-								  HorizontalAlignment="Center"
-								  Height="100"
-								  Width="100" />
-				</Grid>
-			</DataTemplate>
-		</utu:ExtendedSplashScreen.LoadingContentTemplate>
-	</utu:ExtendedSplashScreen>
+            <ProgressRing IsActive="True"
+                Grid.Row="1"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                Height="100"
+                Width="100" />
+          </Grid>
+        </DataTemplate>
+      </utu:ExtendedSplashScreen.LoadingContentTemplate>
+    </utu:ExtendedSplashScreen>
+  </Border>
 </UserControl>
