--- a/UI/SplashScreenSample/SplashScreenSample.Shared/App.xaml
+++ b/UI/SplashScreenSample/SplashScreenSample.Shared/App.xaml
@@ -8,8 +8,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->                
-            </ResourceDictionary.MergedDictionaries>
+                <!-- Add resource dictionaries here -->
+				<ToolkitResources xmlns="using:Uno.Toolkit.UI" />
+			</ResourceDictionary.MergedDictionaries>
             <!-- Add resources here -->
         </ResourceDictionary>
     </Application.Resources>
